--- a/deploy/index.html
+++ b/deploy/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="css/styles.css">
-        <title>Name Of Project</title>
+        <title>Info 151 Spring 2025</title>
     </head>
 <body>
 
-    <h1>HELLO!!</h1>
+    <h1>HELLO WORLD!</h1>
 
     <script src="js/scripts-min.js"></script>
 </body>
